<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="47dp">

        <ScrollView
            android:id="@+id/Scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/Scroll"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Scroll">


                <Button
                    android:id="@+id/IniciarSesion"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="144dp"
                    android:layout_height="57dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="Iniciar Sesion"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/Registrarse"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password"></Button>

                <TextView
                    android:id="@+id/text_plano"
                    android:layout_width="298dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="160dp"
                    android:fontFamily="@font/pacifico"
                    android:text="La herramienta más cómoda para controlar tu dinero!"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/Registrarse"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="141dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:text="Registrarse"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <EditText
                    android:id="@+id/password"
                    style="@android:style/Widget.Holo.AutoCompleteTextView"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="24dp"
                    android:autofillHints=""
                    android:fontFamily="@font/acme"
                    android:hint="@string/InPsw"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nombre" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="326dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/bangers"
                    android:text="@string/bienvenido_a_coins_3"
                    android:textSize="46sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="140dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/text_plano"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/banco" />

                <EditText
                    android:id="@+id/nombre"
                    style="@android:style/Widget.Holo.AutoCompleteTextView"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="232dp"
                    android:fontFamily="@font/acme"
                    android:gravity="center"
                    android:hint="@string/InNombre"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_marginTop="72dp"
                    android:fontFamily="@font/acme"
                    android:text="Derechos Reservados Coins Mexico 2019"
                    android:textSize="10sp"
                    app:layout_constraintTop_toBottomOf="@+id/enterprise"
                    tools:layout_editor_absoluteX="8dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/acme"
                    android:text="¿Qué somos?"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/IniciarSesion"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/infolatam"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/acme"
                    android:text="@string/info_latam"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/benefits"
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/acme"
                    android:text="Beneficios!"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/infolatam"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/ben"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/acme"
                    android:text="@string/Beneficios"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/benefits"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/empresas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/acme"
                    android:text="Informacion para Empresas"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/ben"
                    tools:layout_editor_absoluteX="161dp" />

                <TextView
                    android:id="@+id/enterprise"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/acme"
                    android:text="@string/Empresas"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/empresas"
                    tools:layout_editor_absoluteX="0dp" />

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="128dp"
                    android:layout_marginTop="12dp"
                    android:onClick="clickme"
                    android:text="Contactanos"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enterprise" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


</android.support.constraint.ConstraintLayout>